fix: wrong package names

--- a/packages/world-sphere-core/package.json
+++ b/packages/world-sphere-core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@world-sphere/react",
+    "name": "@world-sphere/core",
     "version": "0.0.0",
     "main": "./index.tsx",
     "types": "./index.tsx",
