--- a/packages/world-sphere-react/package.json
+++ b/packages/world-sphere-react/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@world-sphere/core",
+    "name": "@world-sphere/react",
     "version": "0.0.0",
     "main": "./index.tsx",
     "types": "./index.tsx",
