--- a/packages/world-sphere-data/package.json
+++ b/packages/world-sphere-data/package.json
@@ -1,20 +1,24 @@
 {
     "name": "@world-sphere/data",
     "version": "0.0.0",
-    "main": "./index.tsx",
-    "types": "./index.tsx",
+    "main": "index.js",
     "license": "MIT",
     "private": true,
     "scripts": {
-        "lint": "eslint *.ts*"
+        "lint": "eslint *.ts*",
+        "gen": "ts-node ./index.ts"
     },
     "devDependencies": {
-        "@types/react": "^17.0.37",
-        "@types/react-dom": "^17.0.11",
+        "@types/node": "^18.7.16",
+        "@types/three": "^0.144.0",
         "eslint": "^7.32.0",
         "eslint-config-custom": "*",
-        "react": "^18.2.0",
+        "ts-node": "^10.9.1",
         "tsconfig": "*",
+        "tslib": "^2.4.0",
         "typescript": "^4.5.2"
+    },
+    "dependencies": {
+        "three": "^0.144.0"
     }
 }
