--- a/package.json
+++ b/package.json
@@ -10,15 +10,27 @@
         "build": "turbo run build",
         "dev": "turbo run dev --parallel",
         "lint": "turbo run lint",
+        "test": "turbo run test",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "postinstall": "husky install"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.19.1",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
         "@commitlint/cli": "^17.1.2",
         "@commitlint/config-conventional": "^17.1.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.0.3",
+        "babel-jest": "^29.0.3",
         "eslint-config-custom": "*",
         "husky": "^8.0.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.0.3",
+        "jest-environment-jsdom": "^29.0.3",
         "prettier": "latest",
+        "ts-jest": "^29.0.1",
         "turbo": "latest"
     },
     "engines": {
