--- a/packages/world-sphere-data/package.json
+++ b/packages/world-sphere-data/package.json
@@ -6,7 +6,8 @@
     "private": true,
     "scripts": {
         "lint": "eslint *.ts*",
-        "gen": "ts-node ./index.ts"
+        "gen": "ts-node ./index.ts",
+        "test": "jest --coverage"
     },
     "devDependencies": {
         "@types/node": "^18.7.16",
