--- a/packages/world-sphere-core/package.json
+++ b/packages/world-sphere-core/package.json
@@ -5,7 +5,8 @@
     "types": "./index.ts",
     "license": "MIT",
     "scripts": {
-        "lint": "eslint *.ts*"
+        "lint": "eslint *.ts*",
+        "test": "jest --coverage"
     },
     "devDependencies": {
         "@types/react": "^17.0.37",
