feat: added framer-motion-3d to animate country hover

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "engines": {
         "node": ">=14.0.0"
     },
-    "packageManager": "npm@7.24.0"
+    "packageManager": "npm@7.24.0",
+    "dependencies": {
+        "framer-motion-3d": "^7.6.4"
+    }
 }
