--- a/packages/world-sphere-data/tsconfig.json
+++ b/packages/world-sphere-data/tsconfig.json
@@ -1,7 +1,5 @@
 {
     "extends": "tsconfig/base.json",
-    "include": [
-        "./src/**/*.tsx",
-        "./src/**/*.ts"
-    ]
+    "include": ["."],
+    "exclude": ["dist", "build", "node_modules"]
 }
