--- a/packages/world-sphere-core/package.json
+++ b/packages/world-sphere-core/package.json
@@ -19,6 +19,7 @@
         "typescript": "^4.5.2"
     },
     "dependencies": {
-        "three": "^0.144.0"
+        "three": "^0.144.0",
+        "@world-sphere/data": "*"
     }
 }
