--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "prettier": "2.8.1",
+        "resize-observer-polyfill": "^1.5.1",
         "ts-jest": "^29.0.1",
         "turbo": "latest"
     },
