--- a/package.json
+++ b/package.json
@@ -39,5 +39,7 @@
         "node": ">=14.0.0"
     },
     "packageManager": "npm@7.24.0",
-    "dependencies": {}
+    "dependencies": {
+        "tsup": "^6.5.0"
+    }
 }
