--- a/packages/world-sphere-core/package.json
+++ b/packages/world-sphere-core/package.json
@@ -1,12 +1,14 @@
 {
     "name": "@world-sphere/core",
     "version": "0.0.1",
-    "main": "./index.ts",
-    "types": "./index.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "license": "MIT",
     "scripts": {
         "lint": "eslint *.ts*",
-        "test": "jest --coverage"
+        "test": "jest --coverage",
+        "dev": "npm run build --watch",
+        "build": "tsup index.ts --format cjs --dts"
     },
     "devDependencies": {
         "@types/react": "^17.0.37",
