--- a/packages/world-sphere-react/package.json
+++ b/packages/world-sphere-react/package.json
@@ -1,12 +1,14 @@
 {
     "name": "@world-sphere/react",
     "version": "0.0.1",
-    "main": "./index.tsx",
-    "types": "./index.tsx",
+    "main": "./dist/index.jsx",
+    "types": "./dist/index.d.ts",
     "license": "MIT",
     "scripts": {
         "lint": "eslint *.ts*",
-        "test": "jest --coverage --silent --passWithNoTests"
+        "test": "jest --coverage --silent --passWithNoTests",
+        "dev": "npm run build --watch",
+        "build": "tsup index.tsx --format cjs --dts"
     },
     "devDependencies": {
         "@types/react": "^17.0.37",
