--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "private": true,
     "name": "world-sphere",
     "version": "0.0.1",
     "workspaces": [
@@ -11,12 +12,16 @@
         "lint": "turbo run lint",
         "test": "turbo run test",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "postinstall": "husky install"
+        "postinstall": "husky install",
+        "changeset": "changeset",
+        "version-packages": "changeset version",
+        "release": "turbo run build --filter=web^... && changeset publish"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.19.1",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
+        "@changesets/cli": "^2.25.2",
         "@commitlint/cli": "^17.1.2",
         "@commitlint/config-conventional": "^17.1.0",
         "@testing-library/jest-dom": "^5.16.5",
