feat: run changeset version

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -4,5 +4,8 @@
         "base.json",
         "nextjs.json",
         "react-library.json"
-    ]
+    ],
+    "publishConfig": {
+        "access": "public"
+    }
 }
