--- a/packages/world-sphere-core/package.json
+++ b/packages/world-sphere-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@world-sphere/core",
-    "version": "0.0.0",
+    "version": "0.1.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "license": "MIT",
@@ -24,5 +24,8 @@
         "three": "^0.144.0",
         "@world-sphere/data": "*",
         "@world-sphere/types": "*"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
